--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -1,7 +1,151 @@
-@use '../../scss/utilities/variables' as variables;
+@use '../../scss/utilities/variables' as var;
+@use '../../scss/utilities/mixings' as mix;
 
-.footer{
-    .footer-logo{}
-    .footer-info{}
-    .footer-contact{}
+.footer {
+    width: var.$per-10;
+    height: nth(var.$hundreds, 2);
+    display: flex;
+    align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: absolute;
+    // bottom: 0;
+    .footer-center {
+        @include mix.center(nth(var.$hundreds, 8));
+        text-align: center;
+        .footer-logo {
+            margin-bottom: var.$mp-i;
+            font-weight: nth(var.$fw, 9);
+        }
+        .footer-info {
+            margin-bottom: var.$mp-i;
+            font-size: var.$size-h;
+            .address,
+            .phone,
+            .cr {
+                margin-bottom: var.$mp-f;
+            }
+        }
+        .footer-contact {
+            font-size: var.$mp-j;
+            cursor: pointer;
+        }
+    }
+}
+
+/*----- Escritorio -----*/
+
+@media (min-width: 1199.98px) {
+    
+}
+
+
+/*----- Tablet -----*/
+
+
+/*Portrait*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+    // body {
+    //     background: orange;
+    // }
+
+    .footer {
+        .footer-center {
+            .footer-logo {
+                font-size: var.$mp-g;
+            }
+            .footer-info {
+                font-size: var.$mp-e;
+                .address,
+                .phone,
+                .cr {
+                    margin-bottom: var.$mp-d;
+                }
+            }
+            .footer-contact {
+                font-size: var.$mp-h;
+            }
+        }
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
+    // body {
+    //     background: blue;
+    // }
+
+    // .footer {
+    //     .footer-center {
+    //         .footer-logo {
+    //         }
+    //         .footer-info {
+    //             .address,
+    //             .phone,
+    //             .cr {
+    //             }
+    //         }
+    //         .footer-contact {
+    //         }
+    //     }
+    // }
+}
+
+
+/*----- movil -----*/
+
+
+/*Portrait*/
+
+
+/*Default*/
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+    // body {
+    //     background: green;
+    // }
+
+    .footer {
+        .footer-center {
+            width: auto;
+            margin-left: 5%;
+            .footer-logo {
+            }
+            .footer-info {
+                .address,
+                .phone,
+                .cr {
+                }
+            }
+            .footer-contact {
+            }
+        }
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
+    body {
+        background: pink;
+    }
+
+    .footer {
+        .footer-center {
+            
+            .footer-logo {
+            }
+            .footer-info {
+                .address,
+                .phone,
+                .cr {
+                }
+            }
+            .footer-contact {
+            }
+        }
+    }
 }
