scales in sass implemented

--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -110,7 +110,7 @@
     .footer {
         .footer-center {
             width: auto;
-            margin-left: 5%;
+            margin-left: var.$per-1 / 2;
             .footer-logo {
             }
             .footer-info {
