--- a/src/views/Home/_Home.scss
+++ b/src/views/Home/_Home.scss
@@ -4,17 +4,17 @@
 
 .home-content {
     @include mix.center(nth(var.$medias, 3));
-    height: 100%;
+    height: var.$per-10;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     // background: chartreuse;
     .home-header-picture {
         display: flex;
-        margin-top: 50px;
-        margin-bottom: 50px;
+        margin-top: var.$mp-l + var.$mp-f;
+        margin-bottom: var.$mp-l + var.$mp-f;
         .home-picture {
-            width: 40%;
-            height: 550px;
-            margin: 15px;
+            width: var.$per-4;
+            height: nth(var.$hundreds , 5) + (nth(var.$hundreds , 1) / 2);
+            margin: var.$mp-h;
             background-size: cover;
         }
         .first-picture{
@@ -29,55 +29,55 @@
     }
     .home-body-presentation {
         @include mix.center(var.$per-6);
-        margin-top: 100px;
-        margin-bottom: 100px;
+        margin-top: nth(var.$hundreds , 1);
+        margin-bottom: nth(var.$hundreds , 1);
         display: flex;
         align-items: center;
         .picture-presentation {
-            width: 350px;
-            height: 300px;
+            width: var.$mp-u + var.$size-p;
+            height: nth(var.$hundreds , 3);
             background-image: url('https://user-images.githubusercontent.com/56218293/116575961-693ad900-a90f-11eb-9e44-f73543317341.jpg');
             background-size: cover;
         }
         .title-presentation {
-            font-size: 30px;
-            width: 250px;
-            margin-left: 10%;
+            font-size: var.$size-p;
+            width: var.$mp-t - var.$mp-d;
+            margin-left: var.$per-1;
             font-weight: nth(var.$fw, 8);
         }
     }
     .home-footer-hour {
         background-color: nth(var.$grey, 2);
         opacity: .6;
-        width: 100%;
-        height: 280px;
-        margin-top: 50px;
-        margin-bottom: 50px;
+        width: var.$per-10;
+        height: nth(var.$hundreds , 2) + var.$mp-nn;
+        margin-top: var.$mp-l + var.$mp-f;
+        margin-bottom: var.$mp-l + var.$mp-f;
         display: flex;
         align-items: center;
         .hour-circle {
             background: var.$white;
             @include mix.center(var.$per-2);
-            height: 80%;
-            border-radius: 50%;
+            height: var.$per-8;
+            border-radius: var.$per-5;
             text-align: center;
             .hour-content{
-                margin-top: 10%;
+                margin-top: var.$per-1;
                 .hour-icon {
-                    margin-bottom: 10px;
-                    font-size: 18px;
+                    margin-bottom: var.$mp-f;
+                    font-size: var.$size-k;
                 }
                 .hour-title {
                     font-weight: nth(var.$fw, 7);
                 }
                 .hour-slash {
-                    margin-top: 10px;
-                    margin-bottom: 10px;
+                    margin-top: var.$mp-f;
+                    margin-bottom: var.$mp-f;
                 }
                 .hour-days {
                     .and{
-                        margin-top: 10px;
-                        margin-bottom: 10px;
+                        margin-top: var.$mp-f;
+                        margin-bottom: var.$mp-f;
                     }
                 }
             }
@@ -153,8 +153,8 @@
         width: nth(var.$hundreds, 9);
         .home-header-picture {
             .home-picture {
-                width: 30%;
-                height: 440px;
+                width: var.$per-3;
+                height: nth(var.$hundreds , 4) + var.$mp-l;
             }
             .first-picture{
     
@@ -169,16 +169,16 @@
         .home-body-presentation {
             width: var.$per-8;
             .picture-presentation {
-                width: 400px;
+                width: nth(var.$hundreds , 4);
             }
             .title-presentation {}
         }
         .home-footer-hour {
             .hour-circle {
-                width: 30%;
-                height: 90%;
+                width: var.$per-3;
+                height: var.$per-9;
                 .hour-content{
-                    margin-top: 15%;
+                    margin-top: var.$per-3 / 2;
                     .hour-icon {}
                     .hour-title {}
                     .hour-slash {}
@@ -203,13 +203,13 @@
     //     background: green;
     // }
     .home-content {
-        width: 350px;
+        width: var.$mp-u + var.$size-p;
         .home-header-picture {
             display: grid;
-            margin-top: 0px;
+            margin-top: var.$mp-a;
             .home-picture {
-                width: 100%;
-                height: 440px;
+                width: var.$per-10;
+                height:  nth(var.$hundreds , 4) + var.$mp-l;
             }
             .first-picture{
     
@@ -224,22 +224,22 @@
         .home-body-presentation {
             width: var.$per-10;
             display: grid;
-            margin-bottom: 0px;
-            margin-left: 5%;
+            margin-bottom: var.$mp-a;
+            margin-left: var.$per-1 / 2;
             .picture-presentation {
-                width: 350px;
+                width: var.$mp-u + var.$size-p;
             }
             .title-presentation {
                 position: relative;
-                bottom: 96px;
+                bottom: var.$mp-o;
                 opacity: 0.6;
             }
         }
         .home-footer-hour {
             align-content: center;
-            margin-left: 5%;
+            margin-left: var.$per-1 / 2;;
             .hour-circle {
-                width: 70%;
+                width: var.$per-7;
                 .hour-content{
                     .hour-icon {}
                     .hour-title {}
