--- a/src/views/Home/_Home.scss
+++ b/src/views/Home/_Home.scss
@@ -1,12 +1,10 @@
 @use '../../scss/utilities/variables' as var;
 @use '../../scss/utilities/mixings' as mix;
 
-
 .home-content {
     @include mix.center(nth(var.$medias, 3));
     height: var.$per-10;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    // background: chartreuse;
     .home-header-picture {
         display: flex;
         margin-top: var.$mp-l + var.$mp-f;
@@ -28,22 +26,24 @@
         }
     }
     .home-body-presentation {
-        @include mix.center(var.$per-6);
+        @include mix.center(var.$per-10);
         margin-top: nth(var.$hundreds , 1);
         margin-bottom: nth(var.$hundreds , 1);
         display: flex;
         align-items: center;
         .picture-presentation {
-            width: var.$mp-u + var.$size-p;
+            width: 460px;
             height: nth(var.$hundreds , 3);
             background-image: url('https://user-images.githubusercontent.com/56218293/116575961-693ad900-a90f-11eb-9e44-f73543317341.jpg');
             background-size: cover;
+            margin-left: auto;
         }
         .title-presentation {
             font-size: var.$size-p;
             width: var.$mp-t - var.$mp-d;
             margin-left: var.$per-1;
             font-weight: nth(var.$fw, 8);
+            margin-right: auto;
         }
     }
     .home-footer-hour {
@@ -91,42 +91,8 @@
 
 @media (min-width: 1199.98px) {
     // body {
-    //     background: red;
+    //     background: lightblue;
     // }
-
-    .home {
-        .home-header-picture {
-            .home-picture {
-    
-            }
-            .first-picture{
-    
-            }
-            .second-picture{
-    
-            }
-            .third-picture{
-                
-            }
-        }
-        .home-body-presentation {
-            
-            .picture-presentation {
-               
-            }
-            .title-presentation {}
-        }
-        .home-footer-hour {
-            .hour-circle {
-                .hour-content{
-                    .hour-icon {}
-                    .hour-title {}
-                    .hour-slash {}
-                    .hour-days {}
-                }
-            }
-        }
-    }
 }
 
 
@@ -136,8 +102,46 @@
 /*Portrait*/
 
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
-    body {
-        background: orange;
+    // body {
+    //     background: orange;
+    // }
+
+    .home-content {
+        width: 540px;
+        .home-header-picture {
+            display: grid;
+            margin-top: var.$mp-a;
+            .home-picture {
+                width: var.$per-10;
+                height:  nth(var.$hundreds , 4) + var.$mp-l;
+                margin: 10px 0px 10px 0px;
+            }
+        }
+        .home-body-presentation {
+            width: var.$per-10;
+            display: grid;
+            margin-bottom: var.$mp-a;
+            .picture-presentation {
+                width: 100%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .title-presentation {
+                position: relative;
+                bottom: var.$mp-o;
+                opacity: 0.6;
+                margin-left: 20px;
+            }
+        }
+        .home-footer-hour {
+            .hour-circle {
+                width: var.$per-5;
+                height: var.$per-9;
+                .hour-content{
+                    margin-top: var.$per-3 / 2;
+                }
+            }
+        }
     }
 }
 
@@ -156,22 +160,12 @@
                 width: var.$per-3;
                 height: nth(var.$hundreds , 4) + var.$mp-l;
             }
-            .first-picture{
-    
-            }
-            .second-picture{
-    
-            }
-            .third-picture{
-                
-            }
         }
         .home-body-presentation {
             width: var.$per-8;
             .picture-presentation {
                 width: nth(var.$hundreds , 4);
             }
-            .title-presentation {}
         }
         .home-footer-hour {
             .hour-circle {
@@ -179,10 +173,6 @@
                 height: var.$per-9;
                 .hour-content{
                     margin-top: var.$per-3 / 2;
-                    .hour-icon {}
-                    .hour-title {}
-                    .hour-slash {}
-                    .hour-days {}
                 }
             }
         }
@@ -202,6 +192,7 @@
     // body {
     //     background: green;
     // }
+
     .home-content {
         width: var.$mp-u + var.$size-p;
         .home-header-picture {
@@ -210,22 +201,13 @@
             .home-picture {
                 width: var.$per-10;
                 height:  nth(var.$hundreds , 4) + var.$mp-l;
-            }
-            .first-picture{
-    
-            }
-            .second-picture{
-    
-            }
-            .third-picture{
-                
+                margin: 10px 0px 10px 0px;
             }
         }
         .home-body-presentation {
             width: var.$per-10;
             display: grid;
             margin-bottom: var.$mp-a;
-            margin-left: var.$per-1 / 2;
             .picture-presentation {
                 width: var.$mp-u + var.$size-p;
             }
@@ -237,15 +219,8 @@
         }
         .home-footer-hour {
             align-content: center;
-            margin-left: var.$per-1 / 2;;
             .hour-circle {
                 width: var.$per-7;
-                .hour-content{
-                    .hour-icon {}
-                    .hour-title {}
-                    .hour-slash {}
-                    .hour-days {}
-                }
             }
         }
     }
@@ -255,7 +230,14 @@
 /*landscape*/
 
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
-    body {
-        background: black;
+    // body {
+    //     background: pink;
+    // }
+
+    .home-content {
+        width: 765px;
+        .home-body-presentation {
+            width: 90%;
+        }
     }
 }
