--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -40,6 +40,10 @@
                 top: var.$size-s;
                 font-size: var.$size-k;
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                a{
+                    color: black;
+                    text-decoration: none;
+                }
             }
         }
     }
