--- a/src/views/Home/_Home.scss
+++ b/src/views/Home/_Home.scss
@@ -70,7 +70,7 @@
             border-radius: var.$per-5;
             text-align: center;
             .hour-content{
-                margin-top: var.$per-1;
+                margin-top: 3%;
                 .hour-icon {
                     margin-bottom: var.$mp-f;
                     font-size: var.$size-k;
