--- a/src/views/Menu/_Menu.scss
+++ b/src/views/Menu/_Menu.scss
@@ -1,5 +1,5 @@
 .menu {
-    background: cadetblue;
+    //background: cadetblue;
     height: 700px;
     .menu-title {
         text-align: center;
