--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -14,6 +14,9 @@
         .footer-logo {
             margin-bottom: var.$mp-i;
             font-weight: nth(var.$fw, 9);
+            .log-name-niu{
+                margin-bottom: var.$mp-b;
+            }
         }
         .footer-info {
             margin-bottom: var.$mp-i;
