--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,8 @@
 @forward './views/Menu/Menu.scss';
 @forward './views/Gallery/Gallery.scss';
 @forward './views/Team/Team.scss';
-@forward './views/Delivery/Delivery.scss';
+@forward './views/Shop/Shop.scss';
+
 @forward './views/Profile/Profile.scss';
 @forward './views/ProfileContent/ProfileContent.scss';
 @forward './views/ProfileContent/UserData/UserData.scss';
