--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,9 @@
 @forward './views/Menu/Menu.scss';
 @forward './views/Gallery/Gallery.scss';
 @forward './views/Team/Team.scss';
+
 @forward './views/Shop/Shop.scss';
+@forward './views/Shop/FoodDesign';
 
 @forward './views/UserProfile/UserProfile.scss';
 @forward './views/UserContent/ProfileContent.scss';
