--- a/src/views/Team/_Team.scss
+++ b/src/views/Team/_Team.scss
@@ -1,6 +1,8 @@
 .team{
     height: 700px;
     display: flex;
+    margin-top: 60px;
+    margin-bottom: 100px;
     .partner-one{
         background-image: url('../../images/partner-one.png');
         background-position-y: -45px;
