--- a/src/views/Menu/_Menu.scss
+++ b/src/views/Menu/_Menu.scss
@@ -1,6 +1,8 @@
 .menu {
     //background: cadetblue;
     height: 700px;
+    margin-top: 100px;
+    // margin-bottom: 30px;
     .menu-title {
         text-align: center;
         font-size: 26px;
