--- a/src/views/Shop/_Shop.scss
+++ b/src/views/Shop/_Shop.scss
@@ -1,47 +1,42 @@
-#shop-content{
-    max-width: 1150px;
-    margin: auto;
-    background-color: violet;
+.shop-component{
     display: flex;
-    flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    .product{
-        width: 240px;
-        height: 200px;
-        //background-color: wheat;
-        margin: 33px 10px 105px 30px;
-        
-        .product-img{
-            background-image: url('../../images/food-ejm.jpeg');
-            width: 240px;
-            margin: auto;
-            height: 220px;
-            background-size: cover;
-        }
-        .product-name{
-            width: 236px;
-            position: relative;
-            bottom: 30px;
-            left: 5px;
-            color: antiquewhite;
-        }
-        .product-price{
-            position: relative;
-            bottom: 230px;
-            left: 14px;
-            color: white;
-            font-size: 20px;
-            width: 5px;
-        }
-        .product-button{
-            text-align: center;
-            background-color: lightblue;
-            border-radius: 5px;
-            padding: 4px;
+    width: 1150px;
+    height: 670px;
+    margin: auto auto 60px auto;
+    .shop-panel{
+        width: 170px;
+        .button-panel{
+            width: 80%;
+            height: 40px;
+            margin: 60px auto 30px auto;
+            padding: 10px;
+            text-align: left;
             cursor: pointer;
-            position: relative;
-            bottom: 30px;
+            text-decoration: none;
+            color: black;
+            a{
+                color: black;
+            }
+            .link{
+                margin-left: 20px;
+                color: black;
+                text-decoration: none;
+            }
+            &:hover{
+                border-radius: 10px;
+                background-color: cadetblue;
+                color: white;
+                em,
+                a{
+                    color: white;
+                    text-decoration: none;
+                }
+            }
         }
+    }
+    .shop-content{
+        width: 90%;
+        //background-color:#E6EEEC;
+        border-radius: 10px;
     }
 }
