--- a/src/views/UserProfile/_UserProfile.scss
+++ b/src/views/UserProfile/_UserProfile.scss
@@ -1,15 +1,13 @@
 .profile{
     display: flex;
-    //background-color: darkgoldenrod;
     width: 1300px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 2%;
     .profile-panel{
         width: 20%;
-        //background-color: cadetblue;
         ;
         .profile-panel-center{
-            //background-color:darkorchid;
             margin: 10px;
             .logo{
                 background-image: url('../../images/logo.png');
@@ -21,19 +19,23 @@
             .button-panel-profile{
                 width: 90%;
                 margin: 30px auto 30px auto;
-                padding: 14px;
+                padding: 14px 14px 14px 40px;
                 border-radius: 8px;
-                background-color: white;
-                text-align: center;
+                text-align: left;
+                cursor: pointer;
                 &:hover{
-                    background-color:lightblue;
+                    background-color: cadetblue;
                     color: white;
+                    em,
+                    a{
+                        color: white;
+                    }
                 }
             }
             .link{
-                color: grey;
-                text-decoration: none;
                 margin-left: 20px;
+                color: black;
+                text-decoration: none;
             }
             .delete-acount{
                 margin-top: 80px;
@@ -48,12 +50,13 @@
     }
     .profile-content{
         width: 60%;
-        background-color: cornflowerblue;
+        //background-color: cornflowerblue;
     }
     .profile-user,
     .profile-admin{
         width: 20%;
-        background-color: #E6EEEC;
+        //background-color: #E6EEEC;
+        background-color:cadetblue;
         border-radius: 20px;
         .exit{
             position: relative;
@@ -89,6 +92,7 @@
                 margin: 30px auto 30px auto;
                 margin-top: 30px;
                 margin-bottom: 20px;
+                color: white;
             }
         }
         .profile-user-qr,
