implements add products

--- a/src/views/UserContent/UserData/_UserData.scss
+++ b/src/views/UserContent/UserData/_UserData.scss
@@ -23,6 +23,12 @@
                     border-left: none;
                     outline: none;
                     margin-bottom: 20px;
+                    &.invalid{
+                        border-bottom-color: red;
+                    }
+                    &.valid{
+                        border-bottom-color: green;
+                    }
                 }
             }
         }
