--- a/src/views/UserContent/Shop/_FoodDesign.scss
+++ b/src/views/UserContent/Shop/_FoodDesign.scss
@@ -9,13 +9,12 @@
     overflow: scroll;
     height: 100%;
     margin-left: 4%;
-
     .product{
         width: 150px;
         height: 175px;
         margin: 40px;
         .product-img{
-            background-image: url('../../images/food-ejm.jpeg');
+            background-image: url('../../../images/food-ejm.jpeg');
             width: 150px;
             margin: auto;
             height: 120px;
