--- a/src/views/UserContent/UserData/_UserData.scss
+++ b/src/views/UserContent/UserData/_UserData.scss
@@ -2,7 +2,8 @@
     .data-title {
         margin-top: 20px;
         font-size: 24px;
-        margin-left: 40px;
+        left: 148px;
+        position: relative;
     }
     .form-data {
         display: grid;
@@ -10,6 +11,7 @@
             display: flex;
             margin-left: auto;
             margin-right: auto;
+            margin-top: 20px;
             .form-data-left {}
             .form-data-right {}
             .form-data-left,
@@ -34,7 +36,7 @@
         }
         .button-update{
             width: 320px;
-            margin: 0px auto 20px auto;
+            margin: 46px auto 60px auto;
         }
     }
     .conditions{
