--- a/src/views/UserProfile/_UserProfile.scss
+++ b/src/views/UserProfile/_UserProfile.scss
@@ -1,93 +1,109 @@
-.profile{
+.profile {
     display: flex;
-    width: 1300px;
+    width: 1440px;
+    height: 800px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2%;
-    .profile-panel{
-        width: 20%;
+    .profile-panel {
+        width: 10%;
         ;
-        .profile-panel-center{
+        .profile-panel-center {
             margin: 10px;
-            .logo{
+            .logo {
                 background-image: url('../../images/logo.png');
                 width: 80px;
                 height: 80px;
                 margin: 0px auto 70px auto;
                 background-size: 100%;
             }
-            .button-panel-profile{
+            .button-panel-profile {
                 width: 90%;
-                margin: 30px auto 30px auto;
-                padding: 14px 14px 14px 40px;
+                margin: 60px auto;
                 border-radius: 8px;
                 text-align: left;
                 cursor: pointer;
-                &:hover{
+                padding-top: 5px;
+                padding-bottom: 5px;
+                &:hover {
                     background-color: cadetblue;
                     color: white;
                     em,
-                    a{
+                    a {
                         color: white;
                     }
                 }
             }
-            .link{
-                margin-left: 20px;
+            .link {
+                margin-left: 8px;
                 color: black;
                 text-decoration: none;
             }
-            .delete-acount{
-                margin-top: 80px;
+            .delete-acount {
                 text-align: center;
                 cursor: pointer;
-                &:hover, 
-                .link:hover{
+                position: relative;
+                top: 100px;
+                &:hover,
+                .link:hover {
                     color: red;
                 }
             }
         }
     }
-    .profile-content{
-        width: 60%;
+    .profile-content {
+        width: 70%;
         //background-color: cornflowerblue;
     }
     .profile-user,
-    .profile-admin{
+    .profile-admin {
         width: 20%;
         //background-color: #E6EEEC;
-        background-color:cadetblue;
+        background-color: cadetblue;
         border-radius: 20px;
-        .exit{
+        .cartShop {
             position: relative;
-            left: 200px;
-            top: 20px;
+            font-size: 23px;
+            left: 20px;
+            top: 26px;
+            cursor: pointer;
+            a {
+                color: black;
+                text-decoration: none;
+                &:hover {
+                    color: white;
+                }
+            }
+        }
+        .exit {
+            position: relative;
+            left: 229px;
+            bottom: 6px;
+            font-size: 23px;
             width: 18px;
             cursor: pointer;
-            &:hover{
+            &:hover {
                 color: red;
             }
         }
         .profile-user-panel,
-        .profile-admin-panel{
+        .profile-admin-panel {
             //background: antiquewhite;
             margin: 60px auto 80px auto;
             text-align: center;
             width: 90%;
             .user-image,
-            .admin-image{
+            .admin-image {
                 background-image: url('../../images/user-image.png');
                 width: 104px;
                 margin-right: auto;
                 margin-left: auto;
                 height: 80px;
                 background-size: 120px;
-                
             }
             .user-name,
             .user-email,
             .admin-name,
-            .admin-email{
+            .admin-email {
                 width: 200px;
                 margin: 30px auto 30px auto;
                 margin-top: 30px;
@@ -96,7 +112,7 @@
             }
         }
         .profile-user-qr,
-        .profile-admin-qr{
+        .profile-admin-qr {
             background-image: url('../../images/qr-prueba.png');
             width: 143px;
             margin-right: auto;
@@ -108,7 +124,7 @@
     .profile-panel,
     .profile-content,
     .profile-user,
-    .profile-admin{
-        margin: 29px 10px 30px 10px;
+    .profile-admin {
+        margin: 10px;
     }
 }
