--- a/src/views/UserContent/Contact/_Contact.scss
+++ b/src/views/UserContent/Contact/_Contact.scss
@@ -2,13 +2,20 @@
     width: 90%;
     margin: 4% auto;
     .contact-title {}
-    .form-contact {
+    .form-contact{
         width: 60%;
-        margin: 10px auto;
+        margin: 60px auto;
         display: grid;
         .button-update {
-            margin-top: 10px;
+            margin-top: 40px;
             margin-bottom: 20px;
+        }
+        input,
+        textarea{
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            outline: none;
         }
     }
     .info {
@@ -16,16 +23,18 @@
         margin: auto;
         text-align: center;
         .logo {
+            font-weight: 900;
             .logo-name {}
         }
         .logo,
         .phone,
         .hours,
         .email {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         .hours {}
-        .email {}
+        .email {
+        }
         p {
             margin-bottom: 2px;
         }
