--- a/src/components/MenuToggle/_MenuToggle.scss
+++ b/src/components/MenuToggle/_MenuToggle.scss
@@ -20,11 +20,25 @@
     }
 
     .nav{
-
         width: 300px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 80px;
         text-align: center;
+        .nav-item{
+            width: 100%;
+            text-align: center;
+            margin-bottom: 30px;
+            .logo{
+                font-weight: 900;
+            }
+            .hour-days p{
+                margin: 0px;     
+            }
+        }
+        .instagram{
+            position: relative;
+            top: 150px;
+        }
     }
 }
